# mlx-openai-proxy

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: asr.json  models.json
src/mlx_openai_proxy/: asr.py  backend.py  classifier.py  config.py  dashboard.py  images.py  logging_utils.py  main.py  metrics_store.py  model_runtime.py  model_scheduler.py  prompting.py  request_cache.py  request_priority.py  responses_bridge.py  schema_utils.py  service.py
tests/: test_asr.py  test_classifier.py  test_config.py  test_dashboard.py  test_e2e_models.py  test_gemma_thought_parser.py  test_main_dashboard_summary.py  test_metrics_store.py  test_model_runtime.py  test_model_scheduler.py  test_openai_spec_conformance.py  test_prompting.py  test_request_cache.py  test_request_validation.py  test_schema_utils.py  test_service_partial_stream_recovery.py  test_service_stream_metrics.py  test_service_timeout.py
