[project]
name = "mlx-openai-proxy"
version = "0.1.0"
description = "Transparent OpenAI-compatible proxy for MLX-native local model servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "numpy>=1.26.0,<3.0.0",
  "parakeet-mlx>=0.3.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[project.scripts]
mlx-openai-proxy = "mlx_openai_proxy.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
